--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
     </div>
     <div>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     </div>
-    <a   style="padding-bottom:15px; position:fixed; top:95%; left: 1em; color: white;"  href="http://127.0.0.1:5500/index.html"><b>Home</b></a>
+    <a   style="padding-bottom:15px; position:absolute; bottom: -180px; left: 1em; color: white;"  href="http://127.0.0.1:5500/index.html"><b>Home</b></a>
 
 </body>
 </html>
