--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 style=" position: relative; right:20px; color: white;"><b>Solar System</b></h1>
     </div>
     <div class="picture">
-        <div class="frame" style="font-size: 300px;"></div>
+        <div class="frame" style="font-size: 300px; border-style: groove;"></div>
         <div class="sun"></div>
         <div class="orbit_line1"> 
             <div class="earth">
@@ -36,7 +36,7 @@
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     </div>
-    <a   style="padding-bottom:15px; position:absolute; bottom: -180px; left: 1em; color: white;"  href="http://127.0.0.1:5501/index.html"><b>Home</b></a>
+    <a   style="padding-bottom:15px; position:absolute; bottom: -180px; left: 1em; color: white; font-size: 22px;"  href="login.html"><b>Home</b></a>
 
 </body>
 </html>
