improve login page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     </div>
-    <a   style="padding-bottom:15px; position:absolute; bottom: -180px; left: 1em; color: white; font-size: 22px;"  href="login.html"><b>Home</b></a>
+    <a   style="padding-bottom:15px; position:absolute; bottom: -180px; left: 1em; color: white; font-size: 22px;"  href="login.html"><b>Login Page</b></a>
 
 </body>
 </html>
