--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar System</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .login_page{
+            font-size: 25px;
+            color: white;
+        }
+        .login_page:hover{
+            color:blueviolet;
+            font-size: 27px;
+        }
+    </style>
+    <script>
+        function doubleclickdoge(){
+            alert("Hey I am Doge !!!\nLet's Rick Roll !!!");
+            location.href="https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+        }
+    </script>
 </head>
 <body>
-    <img style="opacity: 0.5; border-radius: 700px; border: 4px solid black; margin:5px; position:fixed; right:0; top: 30px;" src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGU5MWhhbHB5M3JtdHhxcmd0enIxMGcwemNnODJrMWI1N3pkOWc5OCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/VRKheDy4DkBMrQm66p/giphy.gif" width="70"alt="一張圖片" title="Doge">
+    <img ondblclick="doubleclickdoge()" style="opacity: 0.5; border-radius: 700px; border: 4px solid black; margin:5px; position:fixed; right:0; top: 65px;" src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGU5MWhhbHB5M3JtdHhxcmd0enIxMGcwemNnODJrMWI1N3pkOWc5OCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/VRKheDy4DkBMrQm66p/giphy.gif" width="70"alt="一張圖片" title="Doge">
     <div>
         <img style="float: left; width: 60px; height: 60px; position: relative; right: 15px; bottom: 13px;" src="img/icon.png"/>
         <h1 style=" position: relative; right:20px; color: white;"><b>Solar System</b></h1>
+        <hr style="position: relative; bottom: 17px; right: 60px; width: 1625px;"/>
+        <a   class="login_page" style="position: relative; left: 1420px; bottom: 70px;"  href="login.html"><b>Login Page</b></a>
     </div>
     <div class="picture">
         <div class="frame" style="font-size: 300px; border-style: groove;"></div>
@@ -36,7 +54,7 @@
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     </div>
-    <a   style="padding-bottom:15px; position:absolute; bottom: -180px; left: 1em; color: white; font-size: 22px;"  href="login.html"><b>Login Page</b></a>
+    
 
 </body>
 </html>
