--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h1 style=" position: relative; right:20px; color: white;"><b>Solar System</b></h1>
         <hr style="position: relative; bottom: 17px; right: 60px; width: 1625px;"/>
         <a   class="login_page" style="position: relative; left: 1420px; bottom: 70px;"  href="login.html"><b>Login Page</b></a>
+        <a   class="login_page" style="position: relative; left: 1150px; bottom: 70px;"  href="game/game.html"><b>miniGame</b></a>
     </div>
     <div class="picture">
         <div class="frame" style="font-size: 300px; border-style: groove;"></div>
