modify click start method

--- a/game/game.html
+++ b/game/game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  onkeypress="jump(event)" ondblclick="start()">
+<html lang="en"  onkeypress="jump(event)">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
         </div>-->
         <p  id="countup" style="position: relative; top:-5px; left: 620px; font-size: 18px;">0</p>
         
-        <p  class="hi" id="clickstart">-- DoubleClick to Start --</p>
+        <p  class="hi" id="clickstart" onclick="start()">-- Click Here to Start --</p>
         <p   id="hi" style="position: relative; top:-43px; left: 415px; font-size: 18px;">0</p>
         <h3 id="score" style="position: relative; left: 520px; top: -85px;">Score: </h3>
         <h3 style="position: relative; left: 330px; top: -125px;">HI: </h3>
