add jump button

--- a/game/game.html
+++ b/game/game.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body class="back">
+    <button class="jumpbtn" onclick="jump(event)">-- Jump --</button>
     <a   class="login_page" href="../index.html"><b>Home</b></a>
     <div class="game"> 
         <span>&#9729;</span>
