--- a/login.html
+++ b/login.html
@@ -77,6 +77,7 @@
             font-size: 24px;
         }
 
+
     </style>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -89,7 +90,10 @@
                 document.forms[1].password.style.backgroundColor = color;
                 console.log("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa");
         }
-        
+        var email=document.getElementsByClassName("email");
+        function email(){
+
+        }
     </script>
 </head>
 <body>
@@ -98,7 +102,7 @@
         <h2 style="font-size: 25px; color: white; position: relative; left: 32px; bottom: 4px; border-bottom:1px solid white ; width: 330px;">Welcome to Howard's Website</h2>
         <img src="img/gif.gif" style="width: 300px; opacity: 0.8; position: relative; left: 45px; border: 1px solid white; bottom: 10px;">
         <ion-icon name="mail-outline" style="color: white; position: relative; right: 255px; top: 15px;"></ion-icon>
-        <h4 style="color: white; position: relative; bottom: 28px; left: 73px; border-bottom: 1px solid white; width: 265px;">My email: howardm511jb@gmail.com</h4>
+        <h4 onclick="email()" class="email" style="color: white; position: relative; bottom: 28px; left: 73px; border-bottom: 1px solid white; width: 265px;">My email: howardm511jb@gmail.com</h4>
     <div class="frame">
         
         <h1 class="tittle">Login</h1>
