--- a/日文/50.html
+++ b/日文/50.html
@@ -9,7 +9,11 @@
 <body class="back">
     <h1 class="tittle">日文50音</h1>
     <br/><br/>
-    <input class="input"></input>
+    <!--<input class="input"></input>-->
+    <select class="select" name=" ">
+        <option onclick="平假名()">平假名</option>
+        <option>片假名</option>
+    </select>
     <span class="content">
         <div class="content1">
             <div class="box">1. あ [a]</div>
@@ -45,6 +49,13 @@
             <div class="box">3. ぬ [nu]</div>
             <div class="box">4. ね [ne]</div>
             <div class="box">5. の [no]</div>
+        </div>
+        <div class="content1">
+            <div class="box">1. は [ha]</div>
+            <div class="box">2. ひ [hi]</div>
+            <div class="box">3. ふ [fu]</div>
+            <div class="box">4. へ [he]</div>
+            <div class="box">5. ほ [ho]</div>
         </div>
         <div class="content1">
             <div class="box">1. ま [ma]</div>
